add cdn / remove js files / modified fr to en

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,7 +34,7 @@
         id="availableDate-home" 
         class="form-control btn-lg text-center"
         type="text"
-        data-language='fr'
+        data-language='en'
         data-multiple-dates="30"
         data-multiple-dates-separator="-"
         data-position='bottom left'/>
