--- a/templates/leasing/index.html.twig
+++ b/templates/leasing/index.html.twig
@@ -23,7 +23,7 @@
                         id="availableDate" 
                         type="text"
                         autocomplete="off"
-                        data-language='fr'
+                        data-language='en'
                         data-multiple-dates="30"
                         data-multiple-dates-separator="-"
                         data-position='bottom left' class="form-control text-center"/> 
