--- a/templates/partials/card-one-user.html.twig
+++ b/templates/partials/card-one-user.html.twig
@@ -51,7 +51,7 @@
                           
                     </div>
               </div>
-              <p class="text-small font-italic text-right text-secondary">le {{ comment.createdAt|localizeddate('none', 'none', 'fr', null, 'd MMMM à kk:mm')  }} </p>    
+              <p class="text-small font-italic text-right text-secondary">le {{ comment.createdAt|localizeddate('none', 'none', 'en', null, 'd MMMM à kk:mm')  }} </p>    
         </div>
 
         {% else %}
