--- a/templates/user/user_leasing/leasing_vehicle.html.twig
+++ b/templates/user/user_leasing/leasing_vehicle.html.twig
@@ -125,7 +125,7 @@
             <div class="form-group">
                 <input name="date" placeholder="Dates disponibles" id="availableDate" type="text"
                 class="datepicker-here form-control"
-                data-language='fr'
+                data-language='en'
                 data-multiple-dates="30"
                 data-multiple-dates-separator="-"
                 data-position='top left' readonly  /> 
