--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="{{ asset('pictures/favicon2.png') }}" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ asset('css/leaflet.css') }}" />
-    <link rel="stylesheet" href="{{ asset('bootstrap-4.3.1-dist/css/bootstrap.min.css') }}">    
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">    
     <link rel="stylesheet" href="{{ asset('css/datePicker.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('Fork-Awesome-1.1.7/css/fork-awesome.min.css') }}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fork-awesome/1.1.7/css/fork-awesome.min.css" />
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         <title>{% block title %}{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
@@ -76,11 +76,11 @@
 
 
 {% block body %}{% endblock %}
-<script src="{{ asset('js/jquery-3.4.1.min.js') }}"></script>
-<script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="{{ asset('bootstrap-4.3.1-dist/js/bootstrap.min.js') }}"></script>
-<script src="{{ asset('js/leaflet.js') }}"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
 <script src="{{ asset('js/datePicker.js') }}"></script>
 <script src="{{ asset('js/datepicker.fr.js') }}"></script>
 <script src="{{ asset('js/app.js') }}"></script>
