--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -84,6 +84,7 @@
 <script src="{{ asset('js/datePicker.js') }}"></script>
 <script src="{{ asset('js/datepicker.fr.js') }}"></script>
 <script src="{{ asset('js/app.js') }}"></script>
+<script src="{{ asset('js/map.js') }}"></script>
 <script src="{{ asset('js/modal-validation.js') }}"></script>
 {% block javascript %}{% endblock %}
 </body>
