--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,13 +3,9 @@
 
 {% block body %}
 
-
 {% if app.user %}
     {% include 'partials/toast.html.twig' %}  
 {% endif %}
-
-
-  
 
 {# formulaire de recherche #}
 <div class="text-center my-5">
@@ -19,8 +15,6 @@
   <form autocomplete="off" action="{{ path('leasing_index') }}">
     <h1 class="text-shadow text-white font-weight-bold">Louez du 100% électrique !</h2>
     <h3 class="text-shadow text-white h6  mb-5">En ville, pour la plage, pour s 'amuser: facilitez vos déplacements !</h3>
-
-
     <div class="d-flex justify-content-between row">
       <div class="col-md-4 form-group">
          <input type="text" name="city" id="search-city" class="form-control btn-lg text-center" placeholder="Saisissez une ville">         
@@ -47,23 +41,23 @@
   </form>
 </section>
 
-  
-  <h2 class="h2 font-weight-bold my-5 text-center text-green mb-3">Louez un véhicule léger 100% électrique, entre particuliers simplement & rapidement.</h2>
+<h2 class="h2 font-weight-bold my-5 text-center text-green mb-3">Louez un véhicule léger 100% électrique, entre particuliers simplement & rapidement.</h2>
 
-  <div class="d-none d-sm-block">
-    <section class="row d-flex justify-content-center bg-last container-fluid">
-      {% for vehicle in lastVehicles %}
-        <div class="my-2 mx-4 pb-1 pt-3 carte col-xl-2 col-md-4 col-sm-5 border rounded-lg shadow">
-          {% include 'partials/card.html.twig' %}
-        </div>
-      {% endfor %}
-      </section>
-    <h4 class="h3 font-weight-bold mt-5 text-center text-green">Des Wiwatteurs proches de chez vous !</h4>
-  </div>
-    
-  <div class="mt-3">
-    <section id="map"></section>
-  </div>
+<div class="d-none d-sm-block">
+  <section class="row d-flex justify-content-center bg-last container-fluid">
+    {% for vehicle in lastVehicles %}
+      <div class="my-2 mx-4 pb-1 pt-3 carte col-xl-2 col-md-4 col-sm-5 border rounded-lg shadow">
+        {% include 'partials/card.html.twig' %}
+      </div>
+    {% endfor %}
+    </section>
+  <h4 class="h3 font-weight-bold mt-5 text-center text-green">Des Wiwatteurs proches de chez vous !</h4>
+</div>
+
+{# Affichage de la map #}
+<div class="mt-3">
+  <section id="map"></section>
+</div>
 
 {{ include('partials/footer.html.twig') }}
 {% endblock %}
