--- a/templates/user/user_leasing/leasing_vehicle.html.twig
+++ b/templates/user/user_leasing/leasing_vehicle.html.twig
@@ -9,26 +9,20 @@
 <div class="row d-flex justify-content-center align-items-center overflow-auto pb-3 pt-3">
    
         {% for vehicle in vehicles %}
-            
+            {# si il y a des dates sur le véhicule template sombre #}
                 {% if vehicle.dates | length > 0 %}
                 <div class="my-2 pt-3 pb-3 carte col-xl-2 border rounded-lg mx-3 shadow opacity-05 minified">
-                <div class="text-small mb-2 text-danger text-center"><i class="fa fa-lock text-danger" aria-hidden="true"></i>Une annonce existe déjà.</div>
+                    <div class="text-small mb-2 text-danger text-center"><i class="fa fa-lock text-danger" aria-hidden="true"></i>Une annonce existe déjà.</div>
 
                 {% else %}
 
                 <div data-vehicle-id="{{ vehicle.id }}" class="vehicle-choice my-2 pt-3 pb-3 carte col-xl-2 rounded-lg mx-3 shadow minified">
 
                 {% endif %}
-                
-                    
                     {{ include('partials/vehicle-card.html.twig') }}
-                
                 </div>
 
                 {% else %}
-
-                    
-
                     <div class="tuto border rounded-lg shadow px-3 py-3">
                         <p class="font-weight-bold h5">Créez votre première annonce</p>
                         <hr>
@@ -37,8 +31,6 @@
                         <p class="h6 my-3"><span class="bg-tuto text-white rounded-lg p-1">3. Puis, ajoutez-y les dates disponibles.</span></p>
                         <p class="h6 my-4"><span class="bg-tuto-success text-white rounded-lg p-1">4. Votre annonce sera alors créée.</span></p>                        
                     </div>
-
-
         {% endfor %}
        
 </div>
@@ -52,6 +44,7 @@
 <div class="container pb-5">
    <div class="d-flex flex-column justify-content-center align-items-center">             
         
+        {# formulaire ajout véhicule #}
         <div id="form-ajout" class="mt-5 col-md-8 mx-auto">
             {{ form_start(vehicleForm) }}
 
@@ -119,6 +112,7 @@
             {{ form_end(vehicleForm) }}
             </div>
 
+            {# formulaire ajout des dates #}
             <form action="{{ path('vehicle_leasing_form') }}" method="post" class="col-md-4 mt-5 mx-auto"  autocomplete="off">
 
             <input type="hidden" name="vehicle" id="select-vehicle-id">
@@ -133,18 +127,8 @@
             <input type="hidden" name="token" value="{{ csrf_token('date-form') }}"/>
             
               <button type="submit" id="btn-createPost" class="col mx-auto btn btn-outline-info mt-3">Valider</button>  
-            
-            
-                
-            
-            
         </form>
-    </div> 
-    
-    
-    
-    
-       
+    </div>    
 </div>
 
 {% endblock %}
