--- a/templates/leasing/index.html.twig
+++ b/templates/leasing/index.html.twig
@@ -87,7 +87,7 @@
             {% endfor %}        
         </div>
     </section>
-    <section id="map-resultats" class="col d-none d-lg-block"></section>
+    <section id="map-results" class="col d-none d-lg-block"></section>
 </div>
 
 <script src="{{ asset('js/cancel-padding.js') }}"></script>
