--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -4,16 +4,16 @@
         <div class="d-flex flex-column justify-content-center align-items-center text-center">
           <ul class="d-flex  flex-column justify-content-center  align-items-center">
             <li>
-              <a  href="{{ path('mentionslegales_show') }}">Mentions légales</a>
+              <a  href="{{ path('show_legal_mentions') }}">Mentions légales</a>
             </li>
             <li>
-              <a  href="{{ path('us_page') }}">Qui sommes-nous?</a>              
+              <a  href="{{ path('show_us') }}">Qui sommes-nous?</a>              
             </li>
             <li>
-              <a  href="{{ path('contact') }}">Nous contacter</a>              
+              <a  href="{{ path('show_contact') }}">Nous contacter</a>              
             </li>
             <li>
-              <a  href="{{ path('faq_show') }}">FAQ</a>
+              <a  href="{{ path('show_faq') }}">FAQ</a>
             </li>
           </ul>
           <div class="d-flex justify-content-center mt-2" >
